--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,27 +12,34 @@ find_package(Qt6 6.2 REQUIRED COMPONENTS Quick Network LinguistTools)
 
 #指定库的路径
 link_directories(CMAKE_CURRENT_SOURCE_DIR
-    ./library/Myscript/lib/win-x64/
     ./library/Note/lib/
     ./library/Docx/lib/
-    ./library/zlib/lib/
 )
 
+if(WIN32)
+    link_directories(CMAKE_CURRENT_SOURCE_DIR
+       ./library/Myscript/lib/win-x64/
+    )
 #指定库的头文件路径
 set(IINK_INCLUDES ./library/Myscript/include)
+
+endif()
+
+
 set(Note_INCLUDES ./library/Note/include)
 set(Docx_INCLUDES ./library/Docx/include)
 
+if(WIN32)
 set(include_files
-    ./include/Update.h
-    ./include/Download.h
-    ./include/VersionInfo.h
-    ./include/GetVersion.h
     ./include/Utils.h
     ./include/Export.h
     ./include/FontMetricsProvider.h
     ./include/NoteView.h
     ./include/NoteInfo.h
+    ./include/Update.h
+    ./include/Download.h
+    ./include/VersionInfo.h
+    ./include/GetVersion.h
     ./include/MyCertificate.h
     ./include/RendererListener.h
     ./include/EditorListener.h
@@ -52,6 +59,39 @@ set(src_files
     ./src/AppManager.cpp
 
 )
+else()
+    set(include_files
+        ./include/Utils.h
+        ./include/Export.h
+        ./include/NoteView.h
+        ./include/NoteInfo.h
+        ./include/Update.h
+        ./include/Download.h
+        ./include/VersionInfo.h
+        ./include/GetVersion.h
+        ./include/AppManager.h
+        ./include/MyCertificate.h
+#        ./include/FontMetricsProvider.h
+#        ./include/RendererListener.h
+#        ./include/EditorListener.h
+    )
+set(src_files
+    ./src/Utils.cpp
+    ./src/Export.cpp
+    ./src/NoteView.cpp
+    ./src/NoteInfo.cpp
+    ./src/Update.cpp
+    ./src/Download.cpp
+    ./src/VersionInfo.cpp
+    ./src/GetVersion.cpp
+    ./src/Main.cpp
+    ./src/AppManager.cpp
+#    ./src/FontMetricsProvider.cpp
+
+)
+endif()
+
+
 include_directories(
     ./include
 )
@@ -81,14 +121,14 @@ set(ts_files
     ./translations/ja_JP.ts
 )
 
-qt_add_executable(Supernote
+qt_add_executable(SupernoteApp
     ${app_icon_resource_windows}
     ${include_files}
     ${src_files}
 )
 
 #这里添加可以在C++中使用
-qt_add_resources(Supernote "doc"
+qt_add_resources(SupernoteApp "doc"
     PREFIX
     "/"
     FILES
@@ -100,7 +140,7 @@ qt_add_resources(Supernote "doc"
 set_source_files_properties(${ts_files}
     PROPERTIES OUTPUT_LOCATION "${CMAKE_CURRENT_BINARY_DIR}/translations")
 
-qt_add_translations(Supernote
+qt_add_translations(SupernoteApp
     TS_FILES
     ${ts_files}
     QM_FILES_OUTPUT_VARIABLE qm_files
@@ -110,13 +150,13 @@ qt_add_translations(Supernote
 install(FILES ${qm_files} DESTINATION "translations")
 
 #增加到资源文件
-qt_add_resources(Supernote "translations"
+qt_add_resources(SupernoteApp "translations"
     PREFIX "/"
     BASE "${CMAKE_CURRENT_BINARY_DIR}/translations"
     FILES "${qm_files}"
 )
 
-qt_add_qml_module(Supernote
+qt_add_qml_module(SupernoteApp
     URI Supernote
     VERSION 1.0
     QML_FILES ${qml_files}
@@ -126,14 +166,13 @@ qt_add_qml_module(Supernote
 
 
 #注意放置位置，靠前会报错要在qt_add_executable之后
-target_include_directories(Supernote
-    PRIVATE
+target_include_directories(SupernoteApp PRIVATE
     ${Docx_INCLUDES}
     ${Note_INCLUDES}
     ${IINK_INCLUDES}
 )
 
-set_target_properties(Supernote PROPERTIES
+set_target_properties(SupernoteApp PROPERTIES
     MACOSX_BUNDLE_GUI_IDENTIFIER my.example.com
     MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
     MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
@@ -141,14 +180,25 @@ set_target_properties(Supernote PROPERTIES
     WIN32_EXECUTABLE TRUE
 )
 
-target_link_libraries(Supernote
-    PRIVATE Qt6::Quick
-    PRIVATE Qt6::Network
-    PRIVATE Note
-    PRIVATE Docx
-    PRIVATE iink
-)
+#Currently, the recognition library is only available in the windows version
+if(WIN32)
+    target_link_libraries(SupernoteApp PRIVATE
+         Qt6::Quick
+         Qt6::Network
+         iink
+         Note.dll
+         Docx.dll
+    )
+else()
+    target_link_libraries(SupernoteApp PRIVATE
+        Qt6::Quick
+        Qt6::Network
+        libNote.so
+        libDocx.so
+    )
 
-install(TARGETS Supernote
+endif()
+
+install(TARGETS SupernoteApp
     BUNDLE DESTINATION .
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
