--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,8 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 set(app_icon_resource_windows "${CMAKE_CURRENT_SOURCE_DIR}/resource/supernote.rc")
 
-find_package(Qt6 6.2 REQUIRED COMPONENTS Quick Network LinguistTools)
+find_package(Qt6 6.5 REQUIRED COMPONENTS Quick Network LinguistTools)
+qt_standard_project_setup(REQUIRES 6.5)
 
 #指定库的路径
 link_directories(CMAKE_CURRENT_SOURCE_DIR
@@ -201,4 +202,23 @@ endif()
 
 install(TARGETS SupernoteApp
     BUNDLE DESTINATION .
-    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
+    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+)
+
+qt6_generate_deploy_qml_app_script(
+    TARGET SupernoteApp
+    OUTPUT_SCRIPT deploy_script
+    NO_UNSUPPORTED_PLATFORM_ERROR
+)
+install(SCRIPT ${deploy_script})
+set(CMAKE_INSTALL_PREFIX "/home/ubuntu/work/build")
+set(CPACK_PACKAGE_NAME SupernoteApp)
+set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "My amazing application")
+set(CPACK_PACKAGE_VENDOR "My Company")
+set(CPACK_PACKAGE_INSTALL_DIRECTORY ${CPACK_PACKAGE_NAME})
+set(CPACK_VERBATIM_VARIABLES ON)
+set(CPACK_PACKAGING_INSTALL_PREFIX "/home/ubuntu/work/build")
+set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Manfred Maintainer <mm@example.com>")
+#set(CPACK_DEBIAN_PACKAGE_DEPENDS libc6 libstdc++6 libgcc-s1)
+include(CPack)
